--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The greatest tool on earth",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NPX_UPDATE_LOCALE_FILES=true LC_ALL=en nyc --all -- tap -J test/*.js"
   },
   "files": [
     "app"
@@ -45,25 +45,7 @@
     "storyboard-preset-console": "^3.1.4",
     "dotenv": "^5.0.1",
     "npm-package-arg": "^6.0.0",
-    "rimraf": "^2.6.2",
-    "safe-buffer": "^5.1.0",
-    "update-notifier": "^2.3.0",
-    "which": "^1.3.0",
-    "y18n": "^4.0.0",
-    "yargs": "^11.0.0",
-    "cross-env": "^5.1.3",
-    "json": "^9.0.6",
-    "marked-man": "^0.2.1",
-    "mkdirp": "^0.5.1",
-    "npm": "^5.7.1",
-    "nyc": "^11.4.1",
-    "require-inject": "^1.4.0",
-    "standard": "^11.0.0",
-    "standard-version": "^4.3.0",
-    "tacks": "^1.2.6",
-    "tap": "^11.1.2",
-    "weallbehave": "^1.2.0",
-    "weallcontribute": "^1.0.8"
+    "npm": "^5.7.1"
   },
   "homepage": "https://github.com/agrublev/hvn#readme",
   "devDependencies": {
