--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hvn",
-  "version": "1.2.1",
+  "version": "1.2.52",
   "description": "The greatest tool on earth",
   "main": "index.js",
   "scripts": {
@@ -29,23 +29,28 @@
     "url": "https://github.com/agrublev/hvn/issues"
   },
   "dependencies": {
+    "args": "^5.0.0",
     "chalk-pipe": "^2.0.0",
+    "check-python": "^1.0.0",
     "clear": "^0.1.0",
     "cli-columns": "^3.1.2",
+    "clui": "^0.3.6",
     "cmdify": "0.0.4",
     "colors": "^1.1.2",
     "commander": "^2.18.0",
+    "dotenv": "^5.0.1",
     "execa": "^1.0.0",
     "inquirer": "^6.2.0",
+    "npm": "^5.7.1",
+    "npm-package-arg": "^6.0.0",
+    "parcel-bundler": "^1.9.7",
     "phantomjs": "^1.9.18",
+    "shelljs": "^0.8.2",
     "signale": "^1.3.0",
     "simplecrawler": "^0.5.3",
     "storyboard": "^3.1.4",
     "storyboard-listener-browser-extension": "^3.1.4",
-    "storyboard-preset-console": "^3.1.4",
-    "dotenv": "^5.0.1",
-    "npm-package-arg": "^6.0.0",
-    "npm": "^5.7.1"
+    "storyboard-preset-console": "^3.1.4"
   },
   "homepage": "https://github.com/agrublev/hvn#readme",
   "devDependencies": {
