--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdify": "0.0.4",
     "colors": "^1.1.2",
     "commander": "^2.18.0",
+    "data-store": "^3.1.0",
     "dotenv": "^5.0.1",
     "edit-json-file": "^1.1.0",
     "execa": "^1.0.0",
@@ -61,7 +62,5 @@
   "devDependencies": {
     "babel-core": "^6.26.3"
   },
-  "hvn": {
-    "run": "start"
-  }
+  "hvn": {}
 }
