--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "postlint-fix": "prettier --ignore-path .eslintignore --single-quote --write '**/*.js'",
     "precommit": "lint-staged",
     "prestart": "yarn build",
-    "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./app/main.dev.js",
+    "start": "cross-env NODE_ENV=production run-electron ./app/",
+    "start-main-dev": "cross-env HOT=1 NODE_ENV=development run-electron -r babel-register ./app/main.dev.js",
     "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r babel-register ./internals/scripts/RunTests.js",
     "test-all": "yarn lint && yarn flow && yarn build && yarn test && yarn test-e2e",
@@ -121,6 +121,7 @@
   "keywords": [
     "electron",
     "boilerplate",
+    "boilerplate",
     "react",
     "flow",
     "webpack",
@@ -170,7 +171,7 @@
     "css-loader": "^1.0.0",
     "data-store": "^3.1.0",
     "detect-port": "^1.2.3",
-    "electron": "^2.0.6",
+    "electron": "3.0.0-beta.13",
     "electron-builder": "^20.26.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.2",
@@ -227,6 +228,7 @@
     "@fortawesome/fontawesome-free": "^5.2.0",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
+    "electron-reloader": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "ent": "^2.2.0",
     "google": "^1.4.0",
@@ -249,6 +251,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
+    "run-electron": "^0.1.0",
     "semver": "5.1.0",
     "simple-spinner": "0.0.5",
     "source-map-support": "^0.5.6",
