--- a/package.json
+++ b/package.json
@@ -109,6 +109,12 @@
       "prefix": "spotify."
     },
     {
+      "name": "App Launcher",
+      "short": "applauncher",
+      "icon": "fal fa-music",
+      "prefix": "app."
+    },
+    {
       "name": "How do i",
       "short": "how",
       "icon": "fal fa-question-circle",
@@ -231,16 +237,21 @@
     "electron-reloader": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "ent": "^2.2.0",
+    "file-icon": "^3.0.0",
     "google": "^1.4.0",
     "history": "^4.7.2",
     "keypress": "^0.2.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.11",
+    "mark.js": "^8.11.1",
     "marked": "0.3.12",
     "nconf": "^0.8.4",
+    "ndx": "^0.4.1",
     "npm-latest": "^1.0.1",
     "openurl": "^1.1.1",
+    "opn": "^5.4.0",
+    "os-apps": "^0.2.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.4",
