--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hvn",
   "version": "1.2.652",
+  "main": "app/dist/renderer.prod.js",
   "description": "The greatest tool on earth",
   "scripts": {
     "build": "concurrently \"yarn build-main\" \"yarn build-renderer\"",
@@ -15,7 +16,7 @@
     "lint-fix": "yarn --silent lint --fix; exit 0",
     "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
-    "package": "yarn build && electron-builder build --publish never",
+    "package": "NODE_ENV=development yarn build && NODE_ENV=development electron-builder build --publish never",
     "package-all": "yarn build && electron-builder build -mwl",
     "package-linux": "yarn build && electron-builder build --linux",
     "package-win": "yarn build && electron-builder build --win --x64",
@@ -44,10 +45,10 @@
     ]
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.develar.ElectronReact",
+    "productName": "HVN",
+    "appId": "org.develar.heaven",
     "files": [
-      "dist/",
+      "app/dist/",
       "node_modules/",
       "app.html",
       "main.prod.js",
@@ -122,18 +123,9 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/chentsulin/electron-react-boilerplate/issues"
+    "url": "https://github.com/agrublev/hvn/issues"
   },
-  "keywords": [
-    "electron",
-    "boilerplate",
-    "boilerplate",
-    "react",
-    "flow",
-    "webpack",
-    "hot",
-    "reload"
-  ],
+  "keywords": [],
   "homepage": "https://github.com/chentsulin/electron-react-boilerplate#readme",
   "jest": {
     "testURL": "http://localhost/",
@@ -156,6 +148,7 @@
     ]
   },
   "devDependencies": {
+    "album-art": "^2.0.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.4.2",
@@ -177,10 +170,13 @@
     "css-loader": "^1.0.0",
     "data-store": "^3.1.0",
     "detect-port": "^1.2.3",
+    "devtron": "^1.4.0",
     "electron": "3.0.0-beta.13",
     "electron-builder": "^20.26.0",
+    "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.8.2",
+    "electron-reloader": "^0.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
@@ -198,78 +194,72 @@
     "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
     "fbjs-scripts": "^0.8.3",
+    "file-icon": "^3.0.0",
     "file-loader": "^1.1.11",
     "flow-bin": "^0.77.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.5.1",
+    "google": "^1.4.0",
+    "history": "^4.7.2",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.4.2",
+    "keypress": "^0.2.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "lint-staged": "^7.2.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.1",
     "minimist": "^1.2.0",
+    "nconf": "^0.8.4",
+    "ndx": "^0.4.1",
     "node-spotify-webhelper": "0.0.6",
+    "npm-latest": "^1.0.1",
     "npm-logical-tree": "^1.2.1",
+    "openurl": "^1.1.1",
+    "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "os-apps": "^0.2.1",
     "prettier": "^1.14.0",
+    "react-hot-loader": "^4.3.4",
+    "react-md": "^1.7.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-test-renderer": "^16.4.1",
     "redux-logger": "^3.0.6",
+    "request": "^2.88.0",
     "rimraf": "^2.6.2",
+    "run-electron": "^0.1.0",
+    "semver": "5.1.0",
+    "simple-spinner": "0.0.5",
     "sinon": "^6.1.4",
+    "source-map-support": "^0.5.6",
     "spectron": "^3.8.0",
+    "spotify-web-helper": "^1.14.0",
     "style-loader": "^0.21.0",
     "stylelint": "^9.4.0",
     "stylelint-config-standard": "^18.2.0",
     "uglifyjs-webpack-plugin": "1.2.7",
+    "url": "^0.11.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.3",
+    "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.3",
     "winston": "^3.1.0",
-    "yarn": "^1.9.2"
-  },
-  "dependencies": {
     "@fortawesome/fontawesome-free": "^5.2.0",
-    "devtron": "^1.4.0",
-    "electron-debug": "^2.0.0",
-    "electron-reloader": "^0.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "ent": "^2.2.0",
-    "file-icon": "^3.0.0",
-    "google": "^1.4.0",
-    "history": "^4.7.2",
-    "keypress": "^0.2.1",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "lodash": "^4.17.11",
-    "mark.js": "^8.11.1",
-    "marked": "0.3.12",
-    "nconf": "^0.8.4",
-    "ndx": "^0.4.1",
-    "npm-latest": "^1.0.1",
-    "openurl": "^1.1.1",
-    "opn": "^5.4.0",
-    "os-apps": "^0.2.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.4",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "request": "^2.88.0",
-    "run-electron": "^0.1.0",
-    "semver": "5.1.0",
-    "simple-spinner": "0.0.5",
-    "source-map-support": "^0.5.6",
-    "spotify-web-helper": "^1.14.0",
-    "url": "^0.11.0",
+    "fetch": "^1.1.0",
     "yargs": "^4.1.0",
+    "yarn": "^1.9.2",
     "zlib": "^1.0.5"
+  },
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "devEngines": {
     "node": ">=7.x",
