--- a/package.json
+++ b/package.json
@@ -1,47 +1,85 @@
 {
-    "name": "hvn",
-    "version": "1.2.652",
-    "description": "The greatest tool on earth",
-    "main": "index.js",
-    "license": "MIT",
-    "bin": {
-        "hvn": "./index.js"
-    },
-    "scripts": {
-        "run": "node index.js",
-        "test": "node index.js",
-        "hello": "echo 'hello'; sleep 2; echo 'bye!'",
-        "sex": "node index.js"
-    },
-    "dependencies": {
-        "cheerio": "~0.10.5",
-        "cli-color": "^0.3.2",
-        "cli-table": "^0.3.1",
-        "cowsay": "^1.3.1",
-        "del": "^3.0.0",
-        "fs": "^0.0.1-security",
-        "global": "^4.3.2",
-        "json5": "^2.1.0",
-        "json5-writer": "^0.1.6",
-        "lolcatjs": "^2.3.2",
-        "optimist": "~0.3.5",
-        "read-package-json": "^2.0.13",
-        "request": "~2.12.0",
-        "surge": "^0.20.1",
-        "tty": "^1.0.1",
-        "tty-table": "^2.6.9"
-    },
-    "devDependencies": {
-        "@octokit/rest": "^15.17.0",
-        "chalk": "^2.4.1",
-        "clear": "^0.1.0",
-        "clui": "^0.3.6",
-        "configstore": "^4.0.0",
-        "figlet": "^1.2.1",
-        "inquirer": "^6.2.0",
-        "lodash": "^4.17.11",
-        "minimist": "^1.2.0",
-        "simple-git": "^1.107.0",
-        "touch": "^3.1.0"
-    }
+	"name": "hvn",
+	"version": "1.2.756",
+	"description": "The greatest tool on earth",
+	"main": "index.js",
+	"license": "MIT",
+	"bin": {
+		"hvn": "bin/run"
+	},
+	"engines": {
+		"node": ">=8"
+	},
+	"files": [
+		"/bin",
+		"/npm-shrinkwrap.json",
+		"/oclif.manifest.json",
+		"/src"
+	],
+	"oclif": {
+		"commands": "./src/commands",
+		"bin": "hvn",
+		"macos.identifier": "freedcamp.hvn",
+		"plugins": [
+			"@oclif/plugin-help"
+		]
+	},
+	"scripts": {
+		"run": "node index.js",
+		"release": "release-it",
+		"hello": "echo 'hello'; sleep 2; echo 'bye!'",
+		"sex": "parcel src/index.js",
+		"postpack": "rm -f oclif.manifest.json",
+		"prepack": "oclif-dev manifest && oclif-dev readme",
+		"test": "echo NO TESTS",
+		"version": "oclif-dev readme && git add README.md"
+	},
+	"pkg": {
+		"scripts": "lib/**/*.js",
+		"assets": "./*",
+		"font": "node_modules/figlet/fonts/ANSI\\ Shadow.flf",
+		"node": "node_modules/**/*"
+	},
+	"preferGlobal": true,
+	"devDependencies": {
+		"@oclif/dev-cli": "^1",
+		"globby": "^8"
+	},
+	"dependencies": {
+		"@oclif/command": "^1",
+		"@oclif/config": "^1",
+		"@oclif/plugin-help": "^2",
+		"@octokit/rest": "^15.17.0",
+		"chalk": "^2.4.1",
+		"cheerio": "~0.10.5",
+		"clear": "^0.1.0",
+		"cli-color": "^0.3.2",
+		"cli-table": "^0.3.1",
+		"clui": "^0.3.6",
+		"configstore": "^4.0.0",
+		"cowsay": "^1.3.1",
+		"del": "^3.0.0",
+		"figlet": "^1.2.1",
+		"fs": "^0.0.1-security",
+		"global": "^4.3.2",
+		"hacker": "^1.1.2",
+		"inquirer": "^6.2.0",
+		"json5": "^2.1.0",
+		"json5-writer": "^0.1.6",
+		"lodash": "^4.17.11",
+		"lolcatjs": "^2.3.2",
+		"minimist": "^1.2.0",
+		"normalize-package-data": "^2.4.0",
+		"optimist": "~0.3.5",
+		"read-package-json": "^2.0.13",
+		"request": "~2.12.0",
+		"shelljs": "^0.8.2",
+		"simple-git": "^1.107.0",
+		"surge": "^0.20.1",
+		"terminal-kit": "^1.26.4",
+		"touch": "^3.1.0",
+		"tty": "^1.0.1",
+		"tty-table": "^2.6.9",
+		"vorpal": "^1.12.0"
+	}
 }
