--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "2.0.1",
 	"description": "The greatest tool on earth",
 	"main": "index.js",
+	"repository": "https://github.com/agrublev/hvn",
 	"license": "MIT",
 	"bin": {
 		"hvn": "bin/run"
