--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"request": "~2.12.0",
 		"shelljs": "^0.8.2",
 		"simple-git": "^1.107.0",
+		"slap": "^0.1.61",
 		"surge": "^0.20.1",
 		"terminal-kit": "^1.26.4",
 		"touch": "^3.1.0",
